# Generative-Latent-Optimization

./: .gitignore  BSDS500_EXPERIMENT_EXECUTION_GUIDE.md  BSDS500_FULL_COMPARISON_EXPERIMENT_PLAN.md  CLAUDE.md  EXPERIMENT_EXECUTION_SCRIPTS.md  FID_OPTIMIZATION_EXPERIMENT_PLAN.md  IMAGE_PREPROCESSING_PLAN.md  IMPLEMENTATION_PLAN.md  LOSS_FUNCTION_EXTENSION_DESIGN.md  OPTIMIZATION_METHODS_COMPARISON_REPORT.md  README.md  REFACTORING_SUMMARY.md  VAE_OPTIMIZATION_METHODS_COMPARISON_TABLE.md  VAE_TOOLKIT_MIGRATION_PLAN.md  baseline_vae_metrics.json  calculate_baseline_metrics.py  calculate_mse_fid.py  debug_psnr_optimization.py  flake.nix  full_scale_mse_experiment.py  measure_remaining_metrics.py  monitor_mse_experiment.py  pyproject.toml  re_evaluate_existing_data.py  requirements-test.txt  requirements.txt  small_scale_mse_test.py  test_bsds500.py  test_fix_verification.py  test_mse_with_vae.py  verify_baseline_fid.py
experiments/: __init__.py
experiments/datasets/: __init__.py  batch_processing_demo.py  dual_datasets_demo.py
experiments/evaluation/: __init__.py  comprehensive_evaluation_demo.py  metrics_evaluation_demo.py
experiments/optimization/: __init__.py  quick_optimization_test.py  single_image_optimization.py
experiments/visualization/: __init__.py  loss_visualization.py
release/v1.0.0/docs/: release_metadata.json  release_notes.md  usage_example.py
scripts/: __init__.py  preprocess_bsds.py
scripts/analysis/: __init__.py  implementation_comparison.py
scripts/examples/: __init__.py
src/config/: model_config.py
src/data/: dataset.py  loader.py  preprocessor.py  transforms.py
src/generative_latent_optimization/: __init__.py
src/generative_latent_optimization/config/: model_config.py
src/generative_latent_optimization/core/: __init__.py  base_classes.py  device_manager.py
src/generative_latent_optimization/dataset/: __init__.py  batch_processor.py  bsds500_dataset.py  factory.py  png_dataset.py  pytorch_dataset.py
src/generative_latent_optimization/evaluation/: __init__.py  dataset_evaluator.py  simple_evaluator.py
src/generative_latent_optimization/metrics/: __init__.py  dataset_metrics.py  image_metrics.py  individual_metrics.py  metrics_integration.py  unified_calculator.py
tests/: __init__.py  compare_implementations.py  test_document_encode_decode.py  test_integration.py  test_loader.py  test_phase1_refactoring.py  test_phase2_refactoring.py  test_transforms.py  test_vae_basic.py  test_vae_fixed.py
tests/fixtures/: __init__.py  assertion_helpers.py  dataset_mocks.py  evaluation_mocks.py  test_helpers.py
tests/integration/: __init__.py  test_optimization_integration.py
tests/unit/: test_vae_basic.py  test_vae_fixed.py
tests/unit/test_dataset/: __init__.py  (+4 more)
(+28 files in other folders)
