[project]
name = "generative-latent-optimization"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yus314", email = "shizhaoyoujie@gmail.com" }
]
requires-python = ">=3.10, <3.12"
dependencies = [
    "accelerate==1.8.1",
    "certifi==2022.12.7",
    "charset-normalizer==2.1.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "diffusers==0.34.0",
    "filelock==3.13.1",
    "fonttools==4.58.4",
    "fsspec==2024.6.1",
    "hf-xet==1.1.5",
    "huggingface-hub==0.33.1",
    "idna==3.4",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.3",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "lpips==0.1.4",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "psutil==7.0.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.28.1",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "six==1.17.0",
    "sympy==1.13.3",
    "tifffile==2025.5.10",
    "tokenizers==0.21.2",
    "torch==2.1.0",
    "torchmetrics==0.6.0",
    "torchvision==0.16.0",
    "tqdm==4.67.1",
    "transformers==4.53.0",
    "triton==2.1.0",
    "typing-extensions==4.9.0",
    "urllib3==1.26.13",
    "vae-toolkit==0.1.0",
    "zipp==3.23.0",
]


[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
